# claude-agent-knowledge-skills

./: .coverage  .env.example  .gitignore  AGENT_KNOWLEDGE_FRAMEWORK.md  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CORE_SKILLS.md  DEPENDENCY_MANAGEMENT.md  FINAL_STATUS.md  GETTING_STARTED.md  GOAL.md  KNOWLEDGE_GRAPH_SPEC.md  Makefile  OUTPUT_LOCATIONS.md  QUICKSTART.md  README.md  REFACTOR_REVIEW.md  SIMPLIFIED_SETUP_SUMMARY.md  SYSTEM_OVERVIEW.md  USAGE.md  VALIDATION_REPORT.md  WORKFLOW_EXPLAINED.md  install-skills.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
agents/: main-agent.md
agents/curator/: AGENT.md
agents/extractor/: AGENT.md
agents/linker/: AGENT.md
agents/orchestrator/: AGENT.md
agents/retrieval/: AGENT.md
agents/sub-agents/: coding-agent.md  judge-agent.md
agents/synthesizer/: AGENT.md
agents/validator/: AGENT.md
integrations/github/: GITHUB_MCP_INTEGRATION.md
integrations/graphify/: GRAPHIFY_SKILL.md
integrations/jira/: JIRA_MCP_INTEGRATION.md  SIMPLIFIED_SETUP.md
integrations/storage/: EFFICIENT_INGESTION_GUIDE.md  INGESTION_SUMMARY.md  README.md  SINGLE_REPO_INGESTION.md  TEST_RESULTS.md  batch_ingest.py  database.py  discover_openshift_repos.py  github_jira_storage_retrieval.md  incremental_update.py  ingest.py  ingest_github.py  ingest_jira.py  public_jira_client.py  schema.sql
output/: README.md
skill-registry/: index.yaml
skills/ask-agentic-docs/: SKILL.md
skills/clone-github-repository/: SKILL.md
skills/create-agentic-docs/: SKILL.md
skills/documentation/: write-agentic-file.md
skills/documentation-generation/: extract-repository-structure.md  link-documentation.md  synthesize-documentation.md
skills/evaluate-agentic-docs/: SKILL.md
skills/evaluation/: check-api-versions.md  record-evaluation.md  spawn-coding-agent.md  spawn-judge-agent.md  validate-yaml-schema.md
skills/generate-knowledge-graph/: SKILL.md
skills/inference/: classify-service-role.md  infer-component-boundary.md
skills/ingest-github-data/: SKILL.md
skills/linking/: link-concepts-to-components.md
skills/monitoring/: log-operation.md
skills/openshift/: parse-kubernetes-controller-pattern.md
skills/parsing/: build-dependency-graph.md  extract-go-structs.md  extract-kubernetes-crds.md
skills/repo/: get-git-history.md  list-files.md  read-file.md  search-code.md
skills/retrieve-from-graph/: SKILL.md
skills/synthesis/: generate-agents-md.md  generate-component-doc.md
skills/validate-agentic-docs/: SKILL.md
skills/validate-knowledge-graph/: SKILL.md
skills/validation/: check-agents-md-sections.md  check-context-budget.md  check-directory-structure.md  check-file-naming.md  check-frontmatter-fields.md  check-navigation-depth.md  check-placeholders.md  check-quality-score.md  check-stale-todos.md  semantic-validate-adr.md  semantic-validate-content-consistency.md  semantic-validate-content-grounding.md  semantic-validate-content-quality.md  semantic-validate-knowledge-graph.md
templates/agentic-structure/: AGENTS.md.template  DESIGN.md.template  DEVELOPMENT.md.template  QUALITY_SCORE.md.template  RELIABILITY.md.template  SECURITY.md.template  TESTING.md.template  component.md.template  concept.md.template
templates/exec-plans/: execution-plan.md.template
tests/: __init__.py  architecture-validation.sh  workflow-validation.sh
(+5 files in other folders)
